// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileHeader Component Snapshot Stability renders consistently with different names and locations 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F3F7F4",
        "paddingBottom": 16,
        "paddingHorizontal": 20,
      },
      {
        "paddingTop": 12,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E9F1EB",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "paddingTop": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DCEAE5",
          "borderRadius": 48,
          "borderWidth": 2,
          "height": 96,
          "justifyContent": "center",
          "marginBottom": 14,
          "width": 96,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E9F1EB",
            "borderRadius": 44,
            "height": 88,
            "justifyContent": "center",
            "width": 88,
          }
        }
      >
        <View
          accessibilityLabel="Icon: person, size: 36, color: #768079"
          testID="ionicon-person"
        />
      </View>
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#1A2520",
          "fontFamily": "InstrumentSerif_400Regular",
          "fontSize": 26,
          "letterSpacing": -0.3,
          "lineHeight": 30,
          "marginBottom": 4,
          "textAlign": "center",
        }
      }
    >
      Alice Johnson
    </Text>
    <Text
      style={
        {
          "color": "#4A5751",
          "fontSize": 13,
          "fontWeight": "500",
          "marginBottom": 4,
        }
      }
    >
      Contractor
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginBottom": 10,
        }
      }
    >
      <View
        accessibilityLabel="Icon: location-outline, size: 13, color: #768079"
        testID="ionicon-location-outline"
      />
      <Text
        style={
          {
            "color": "#768079",
            "fontSize": 12,
          }
        }
      >
        San Francisco, CA
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 6,
          "justifyContent": "center",
          "marginBottom": 8,
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D8E2DA",
            "borderRadius": 16,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          }
        }
      >
        <View
          accessibilityLabel="Icon: flash, size: 12, color: #E26B4F"
          testID="ionicon-flash"
        />
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 11,
              "fontWeight": "600",
            }
          }
        >
          &lt; 1hr response
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D8E2DA",
            "borderRadius": 16,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          }
        }
      >
        <View
          accessibilityLabel="Icon: ribbon, size: 12, color: #3F8C7A"
          testID="ionicon-ribbon"
        />
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 11,
              "fontWeight": "600",
            }
          }
        >
          Insured
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ProfileHeader Component Snapshot Stability renders consistently with edit button 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F3F7F4",
        "paddingBottom": 16,
        "paddingHorizontal": 20,
      },
      {
        "paddingTop": 12,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E9F1EB",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "paddingTop": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DCEAE5",
          "borderRadius": 48,
          "borderWidth": 2,
          "height": 96,
          "justifyContent": "center",
          "marginBottom": 14,
          "width": 96,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E9F1EB",
            "borderRadius": 44,
            "height": 88,
            "justifyContent": "center",
            "width": 88,
          }
        }
      >
        <View
          accessibilityLabel="Icon: person, size: 36, color: #768079"
          testID="ionicon-person"
        />
      </View>
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#1A2520",
          "fontFamily": "InstrumentSerif_400Regular",
          "fontSize": 26,
          "letterSpacing": -0.3,
          "lineHeight": 30,
          "marginBottom": 4,
          "textAlign": "center",
        }
      }
    >
      John Smith
    </Text>
    <Text
      style={
        {
          "color": "#4A5751",
          "fontSize": 13,
          "fontWeight": "500",
          "marginBottom": 4,
        }
      }
    >
      Contractor
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginBottom": 10,
        }
      }
    >
      <View
        accessibilityLabel="Icon: location-outline, size: 13, color: #768079"
        testID="ionicon-location-outline"
      />
      <Text
        style={
          {
            "color": "#768079",
            "fontSize": 12,
          }
        }
      >
        New York, NY
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 6,
          "justifyContent": "center",
          "marginBottom": 8,
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D8E2DA",
            "borderRadius": 16,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          }
        }
      >
        <View
          accessibilityLabel="Icon: flash, size: 12, color: #E26B4F"
          testID="ionicon-flash"
        />
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 11,
              "fontWeight": "600",
            }
          }
        >
          &lt; 1hr response
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D8E2DA",
            "borderRadius": 16,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          }
        }
      >
        <View
          accessibilityLabel="Icon: ribbon, size: 12, color: #3F8C7A"
          testID="ionicon-ribbon"
        />
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 11,
              "fontWeight": "600",
            }
          }
        >
          Insured
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ProfileHeader Component Snapshot Stability renders consistently without edit button 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F3F7F4",
        "paddingBottom": 16,
        "paddingHorizontal": 20,
      },
      {
        "paddingTop": 12,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E9F1EB",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "paddingTop": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DCEAE5",
          "borderRadius": 48,
          "borderWidth": 2,
          "height": 96,
          "justifyContent": "center",
          "marginBottom": 14,
          "width": 96,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E9F1EB",
            "borderRadius": 44,
            "height": 88,
            "justifyContent": "center",
            "width": 88,
          }
        }
      >
        <View
          accessibilityLabel="Icon: person, size: 36, color: #768079"
          testID="ionicon-person"
        />
      </View>
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#1A2520",
          "fontFamily": "InstrumentSerif_400Regular",
          "fontSize": 26,
          "letterSpacing": -0.3,
          "lineHeight": 30,
          "marginBottom": 4,
          "textAlign": "center",
        }
      }
    >
      John Smith
    </Text>
    <Text
      style={
        {
          "color": "#4A5751",
          "fontSize": 13,
          "fontWeight": "500",
          "marginBottom": 4,
        }
      }
    >
      Contractor
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginBottom": 10,
        }
      }
    >
      <View
        accessibilityLabel="Icon: location-outline, size: 13, color: #768079"
        testID="ionicon-location-outline"
      />
      <Text
        style={
          {
            "color": "#768079",
            "fontSize": 12,
          }
        }
      >
        New York, NY
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 6,
          "justifyContent": "center",
          "marginBottom": 8,
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D8E2DA",
            "borderRadius": 16,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          }
        }
      >
        <View
          accessibilityLabel="Icon: flash, size: 12, color: #E26B4F"
          testID="ionicon-flash"
        />
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 11,
              "fontWeight": "600",
            }
          }
        >
          &lt; 1hr response
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D8E2DA",
            "borderRadius": 16,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          }
        }
      >
        <View
          accessibilityLabel="Icon: ribbon, size: 12, color: #3F8C7A"
          testID="ionicon-ribbon"
        />
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 11,
              "fontWeight": "600",
            }
          }
        >
          Insured
        </Text>
      </View>
    </View>
  </View>
</View>
`;
